--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
 @import 'tailwindcss';
 @plugin "daisyui";
+
+
+
+@layer components {
+    .align-element{
+        @apply mx-auto max-w-6xl px-8;
+    }
+}
