Theme setup done

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import 'tailwindcss';
 @plugin "daisyui";
 
-
+@plugin "daisyui" {
+    themes: all;
+  }
 
 @layer components {
     .align-element{
